--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,22 +60,25 @@ jobs:
         done
         
         echo "Running tweego build..."
-        # Try building with story formats included
-        if tweego -o build/game.html passages/ storyformats/ -v; then
-          echo "Build completed successfully with storyformats"
+        # Try building with all directories
+        if tweego -o build/game.html passages/ scripts/ styles/ storyformats/ -v; then
+          echo "Build completed successfully with all directories"
           echo "Output file info:"
           ls -la build/game.html
           echo "File size: $(stat -c%s build/game.html) bytes"
+        elif tweego -o build/game.html passages/ scripts/ styles/ -v; then
+          echo "Build completed successfully without storyformats"
+          echo "Output file info:"
+          ls -la build/game.html
+        elif tweego -o build/game.html passages/ -v; then
+          echo "Build completed successfully with passages only"
+          echo "Output file info:"
+          ls -la build/game.html
         else
-          echo "Build failed, trying without storyformats directory..."
-          if tweego -o build/game.html passages/ -v; then
-            echo "Build completed successfully without storyformats"
-            echo "Output file info:"
-            ls -la build/game.html
-          else
-            echo "Build failed completely"
-            exit 1
-          fi
+          echo "Build failed completely"
+          echo "Trying with verbose error output:"
+          tweego -o build/game.html passages/ --verbose || true
+          exit 1
         fi
         
     - name: List build contents
