--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,20 +77,31 @@ jobs:
         
         echo "Running tweego build..."
         
-        # Try building with all directories including images
-        echo "Attempting: tweego -o build/game.html passages/ scripts/ styles/ img/"
-        if tweego -o build/game.html passages/ scripts/ styles/ img/; then
-          echo "✅ Build completed successfully with all directories"
+        # Build without embedding images
+        echo "Attempting: tweego -o build/game.html passages/ scripts/ styles/"
+        if tweego -o build/game.html passages/ scripts/ styles/; then
+          echo "✅ Build completed successfully"
           echo "Output file info:"
           ls -la build/game.html
           echo "File size: $(stat -c%s build/game.html) bytes"
+          
+          # Copy image files to build directory
+          echo "Copying image files to build directory..."
+          cp -r img/ build/img/
+          echo "✅ Images copied to build/img/"
+          ls -la build/img/
         else
-          echo "❌ First attempt failed, trying without img folder..."
-          echo "Attempting: tweego -o build/game.html passages/ scripts/ styles/"
-          if tweego -o build/game.html passages/ scripts/ styles/; then
-            echo "✅ Build completed successfully without img folder"
+          echo "❌ Build failed, trying with passages only..."
+          echo "Attempting: tweego -o build/game.html passages/"
+          if tweego -o build/game.html passages/; then
+            echo "✅ Build completed successfully with passages only"
             echo "Output file info:"
             ls -la build/game.html
+            
+            # Still copy images even with minimal build
+            echo "Copying image files to build directory..."
+            cp -r img/ build/img/
+            echo "✅ Images copied to build/img/"
           else
             echo "❌ Second attempt failed, trying with passages only..."
             echo "Attempting: tweego -o build/game.html passages/"
