--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,32 +25,26 @@ jobs:
     steps:
     - name: Download and setup Tweego
       run: |
+        # Create tweego subfolder
+        mkdir tweego
+        
         # Download Tweego zip file
         wget -q https://github.com/tmedwards/tweego/releases/download/v2.1.1/tweego-2.1.1-linux-x64.zip
         echo "Downloaded zip file"
         
-        # Extract and list contents to see structure
-        unzip -q tweego-2.1.1-linux-x64.zip
-        echo "Archive contents:"
-        ls -la
+        # Extract to tweego subfolder
+        unzip -q tweego-2.1.1-linux-x64.zip -d tweego/
+        echo "Extracted to tweego/ subfolder"
         
         # Find all tweego executables and make them executable
-        find . -name "tweego" -type f -exec chmod +x {} \;
+        find tweego/ -name "tweego" -type f -exec chmod +x {} \;
         
-        # Find the tweego executable path and move it to a standard location
-        TWEEGO_PATH=$(find . -name "tweego" -type f | head -1)
+        # Find the tweego executable path and copy it to PATH
+        TWEEGO_PATH=$(find tweego/ -name "tweego" -type f | head -1)
         echo "Found tweego at: $TWEEGO_PATH"
         
         # Copy tweego to /usr/local/bin so it's available in PATH
         sudo cp "$TWEEGO_PATH" /usr/local/bin/tweego
-        
-        # Clean up ALL extracted tweego files to avoid conflicts
-        echo "Cleaning up tweego extraction files..."
-        rm -rf tweego-*
-        rm -f tweego-2.1.1-linux-x64.zip
-        rm -f LICENSE README.md CHANGELOG.md || true
-        echo "Cleanup completed - working directory cleared"
-        ls -la
         
         # Verify tweego works from PATH
         tweego --version || echo "Version command completed"
