--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,22 @@ jobs:
         # Copy tweego to /usr/local/bin so it's available in PATH
         sudo cp "$TWEEGO_PATH" /usr/local/bin/tweego
         
+        # Set up story format directories
+        echo "Setting up story formats..."
+        TWEEGO_DIR=$(dirname "$TWEEGO_PATH")
+        echo "Tweego directory: $TWEEGO_DIR"
+        
+        # Create story formats directory and copy formats
+        sudo mkdir -p /usr/local/share/tweego/storyformats
+        if [ -d "$TWEEGO_DIR/storyformats" ]; then
+          sudo cp -r "$TWEEGO_DIR/storyformats"/* /usr/local/share/tweego/storyformats/
+          echo "✅ Story formats copied"
+          ls -la /usr/local/share/tweego/storyformats/
+        else
+          echo "❌ No storyformats directory found in tweego package"
+          ls -la "$TWEEGO_DIR"
+        fi
+        
         # Verify tweego works from PATH
         tweego --version || echo "Version command completed"
         echo "Tweego setup completed successfully"
@@ -79,7 +95,7 @@ jobs:
         
         echo "Running tweego build..."
         
-        # Build without embedding images
+        # First try to use story formats from standard location
         echo "Attempting: tweego -o build/game.html passages/ scripts/ styles/"
         if tweego -o build/game.html passages/ scripts/ styles/; then
           echo "✅ Build completed successfully"
@@ -93,9 +109,23 @@ jobs:
           echo "✅ Images copied to build/img/"
           ls -la build/img/
         else
-          echo "❌ Build failed, trying with passages only..."
-          echo "Attempting: tweego -o build/game.html passages/"
-          if tweego -o build/game.html passages/; then
+          echo "❌ Build failed, trying with explicit story format path..."
+          echo "Attempting: tweego --format-path=../tweego/tweego-*/storyformats -o build/game.html passages/ scripts/ styles/"
+          if tweego --format-path=../tweego/tweego-*/storyformats -o build/game.html passages/ scripts/ styles/; then
+            echo "✅ Build completed successfully with explicit format path"
+            echo "Output file info:"
+            ls -la build/game.html
+            echo "File size: $(stat -c%s build/game.html) bytes"
+            
+            # Copy image files to build directory
+            echo "Copying image files to build directory..."
+            cp -r img/ build/img/
+            echo "✅ Images copied to build/img/"
+            ls -la build/img/
+          else
+            echo "❌ Build with explicit format path failed, trying with passages only..."
+            echo "Attempting: tweego -o build/game.html passages/"
+            if tweego -o build/game.html passages/; then
             echo "✅ Build completed successfully with passages only"
             echo "Output file info:"
             ls -la build/game.html
