--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
         echo "Downloaded zip file"
         
         # Extract and list contents to see structure
-        unzip -q tweego-2.1.1-linux-x64.zip
+        unzip -qn tweego-2.1.1-linux-x64.zip
         echo "Archive contents:"
         ls -la
         
